--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -16,24 +16,18 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-less": "^1.0.1",
-    "@zeit/next-sass": "^1.0.1",
-    "@zeit/next-typescript": "^1.1.1",
     "add": "^2.0.6",
-    "antd": "^4.11.2",
+    "antd": "^4.12.1",
     "axios": "^0.21.1",
-    "babel-plugin-import": "^1.13.3",
     "less": "^4.1.1",
-    "less-vars-to-js": "^1.3.0",
     "lodash": "^4.17.20",
     "next": "10.0.6",
-    "null-loader": "^4.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-vis": "^1.11.7",
-    "sass": "^1.32.5",
     "swr": "^0.4.1",
     "universal-cookie": "^4.0.4",
-    "yarn": "^1.22.10"
+    "webpack": "^4.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
