--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,66 +1,38 @@
 version: '3.7'
 
 services:
-  postgres:
-    image: postgres:latest
-    container_name: postgres
+  mongo:
+    image: mongo:latest
+    container_name: mongo
     restart: always
-    command: postgres -c config_file=/etc/postgresql.conf
+    command: --config /etc/mongo/mongod.conf --auth --replSet rs0
     ports:
-      - ${GITTRENDS_DATABASE_PORT}:5432
+      - ${GITTRENDS_DATABASE_PORT}:27017
     volumes:
-      - db:/var/lib/postgresql/data
-      - ./data/postgres.conf:/etc/postgresql.conf
+      - db:/data/db
+      - ./data/mongo:/etc/mongo
     environment:
-      POSTGRES_USER: ${GITTRENDS_DATABASE_USERNAME}
-      POSTGRES_PASSWORD: ${GITTRENDS_DATABASE_PASSWORD}
-      POSTGRES_DB: ${GITTRENDS_DATABASE_DB}
+      MONGO_INITDB_ROOT_USERNAME: ${GITTRENDS_DATABASE_USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${GITTRENDS_DATABASE_PASSWORD}
+      MONGO_INITDB_DATABASE: ${GITTRENDS_DATABASE_DB}
 
-  pgadmin:
-    image: dpage/pgadmin4
-    container_name: pgadmin
+  adminmongo:
+    image: mrvautin/adminmongo:latest
+    container_name: adminmongo
     restart: always
     ports:
-      - ${GITTRENDS_PGADMIN_PORT}:80
-    volumes:
-      - pgadmin:/var/lib/pgadmin
+      - ${GITTRENDS_ADMIN_MONGO_PORT}:1234
     environment:
-      PGADMIN_DEFAULT_EMAIL: admin@gittrends.app
-      PGADMIN_DEFAULT_PASSWORD: tzWyJgR7VyAV
-      PGADMIN_LISTEN_ADDRESS: 0.0.0.0
-      PGADMIN_LISTEN_PORT: 80
+      HOST: 0.0.0.0
+      PORT: 1234
+      CONN_NAME: mongo-docker
+      DB_USERNAME: ${GITTRENDS_DATABASE_USERNAME}
+      DB_PASSWORD: ${GITTRENDS_DATABASE_PASSWORD}
+      DB_HOST: mongo
+      DB_PORT: 27017
+      DB_NAME: ${GITTRENDS_DATABASE_DB}
     depends_on:
-      - postgres
-
-  pgbackups:
-    image: prodrigestivill/postgres-backup-local
-    container_name: pgbackups
-    restart: always
-    volumes:
-      - ./backups:/backups
-    environment:
-      - POSTGRES_HOST=${GITTRENDS_DATABASE_HOST}
-      - POSTGRES_PORT=${GITTRENDS_DATABASE_PORT}
-      - POSTGRES_DB=${GITTRENDS_DATABASE_DB}
-      - POSTGRES_USER=${GITTRENDS_DATABASE_USERNAME}
-      - POSTGRES_PASSWORD=${GITTRENDS_DATABASE_PASSWORD}
-      - POSTGRES_EXTRA_OPTS=-Z9 --schema=public --blobs
-      - SCHEDULE=@weekly
-      - BACKUP_KEEP_DAYS=7
-      - BACKUP_KEEP_WEEKS=4
-      - BACKUP_KEEP_MONTHS=1
-      - HEALTHCHECK_PORT=9999
-
-  pghero:
-    image: ankane/pghero
-    container_name: pghero
-    restart: always
-    ports:
-      - ${GITTRENDS_PGHERO_PORT}:8080
-    environment:
-      DATABASE_URL: postgres://${GITTRENDS_DATABASE_USERNAME}:${GITTRENDS_DATABASE_PASSWORD}@postgres:5432/${GITTRENDS_DATABASE_DB}
-    depends_on:
-      - postgres
+      - mongo
 
   redis:
     image: redis:alpine
@@ -84,12 +56,12 @@ services:
       - ./data/nginx/development.conf:/app/data/nginx/default.conf:ro
       - nginx-cache:/var/cache
     environment:
-      GITTRENDS_DATABASE_HOST: postgres
-      GITTRENDS_DATABASE_PORT: 5432
+      GITTRENDS_DATABASE_HOST: mongo
+      GITTRENDS_DATABASE_PORT: 27017
     env_file:
       - .env
     depends_on:
-      - postgres
+      - mongo
 
 volumes:
   db:
