--- a/packages/database-config/package.json
+++ b/packages/database-config/package.json
@@ -6,28 +6,29 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "build": "yarn clean && yarn generate && yarn tsc",
+    "build": "yarn clean && ts-node schema-generator.ts && yarn tsc",
     "clean": "rm -rf dist",
-    "generate": "ts-node schema-generator.ts",
-    "run-migrations": "node -r @gittrends/env-config ./node_modules/.bin/knex migrate:latest"
+    "migrate:create": "sh -c 'ts-node node_modules/.bin/migrate-mongo create $0 -f migrate-mongo-config.ts' ",
+    "migrate:status": "ts-node -r @gittrends/env-config node_modules/.bin/migrate-mongo status -f migrate-mongo-config.ts",
+    "migrate:undo-last": "ts-node -r @gittrends/env-config node_modules/.bin/migrate-mongo down -f migrate-mongo-config.ts && npm run migrate:status",
+    "migrate": "ts-node -r @gittrends/env-config node_modules/.bin/migrate-mongo up -f migrate-mongo-config.ts"
   },
   "dependencies": {
     "ajv": "^7.0.3",
     "ajv-formats": "1.5.0",
     "glob": "^7.1.6",
-    "knex": "^0.21.17",
     "lodash": "^4.17.20",
-    "pg": "^8.5.1",
-    "typescript-json-schema": "^0.48.0",
-    "utf8": "^3.0.0"
+    "migrate-mongo": "^8.1.4",
+    "mongodb": "^3.6.4",
+    "object-hash": "^2.1.1",
+    "typescript-json-schema": "^0.48.0"
   },
   "devDependencies": {
     "@gittrends/env-config": "*",
     "@types/glob": "^7.1.3",
     "@types/jest": "^26.0.20",
-    "@types/knex": "^0.16.1",
     "@types/lodash": "^4.14.168",
-    "@types/utf8": "^2.1.6",
+    "@types/mongodb": "^3.6.6",
     "ts-node": "^9.1.1"
   }
 }
