--- a/packages/website-api/package.json
+++ b/packages/website-api/package.json
@@ -17,7 +17,7 @@
     "@gittrends/database-config": "file:../database-config",
     "axios": "^0.21.1",
     "dayjs": "^1.10.4",
-    "faker": "^5.3.1",
+    "faker": "^5.4.0",
     "fastify": "^3.11.0",
     "fastify-autoload": "^3.4.2",
     "fastify-cli": "^2.7.0",
@@ -25,16 +25,14 @@
     "fastify-helmet": "^5.2.0",
     "fastify-plugin": "^3.0.0",
     "lodash": "^4.17.19",
-    "nodemailer": "^6.4.17",
-    "utf8": "^3.0.0"
+    "nodemailer": "^6.4.18"
   },
   "devDependencies": {
     "@gittrends/env-config": "file:../env-config",
     "@types/faker": "^5.1.6",
     "@types/lodash": "^4.14.168",
-    "@types/node": "^14.14.23",
+    "@types/node": "^14.14.26",
     "@types/nodemailer": "^6.4.0",
-    "ts-node": "^9.1.1",
     "ts-node-dev": "^1.1.1",
     "tsconfig-paths": "^3.9.0"
   }
