--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -8,7 +8,7 @@
     "start": "node -r tsconfig-paths/register -r @gittrends/env-config ./node_modules/.bin/next start"
   },
   "dependencies": {
-    "@ant-design/icons": "^4.4.0",
+    "@ant-design/icons": "^4.5.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-brands-svg-icons": "^5.15.2",
     "@fortawesome/free-regular-svg-icons": "^5.15.2",
@@ -17,7 +17,7 @@
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-less": "^1.0.1",
     "add": "^2.0.6",
-    "antd": "^4.12.1",
+    "antd": "^4.12.3",
     "axios": "^0.21.1",
     "less": "^4.1.1",
     "lodash": "^4.17.20",
@@ -25,9 +25,9 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-vis": "^1.11.7",
-    "swr": "^0.4.1",
+    "swr": "^0.4.2",
     "universal-cookie": "^4.0.4",
-    "webpack": "^4.0.0"
+    "webpack": "4"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
