--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -25,6 +25,7 @@
     "bull-board": "^1.2.0",
     "bullmq": "^1.14.4",
     "chalk": "^4.1.0",
+    "collections": "^5.1.12",
     "commander": "^7.0.0",
     "consola": "^2.15.3",
     "dayjs": "^1.10.4",
@@ -32,7 +33,6 @@
     "ioredis": "^4.22.0",
     "js-yaml": "^4.0.0",
     "lodash": "^4.17.20",
-    "lru-cache": "^6.0.0",
     "mongodb": "^3.6.4",
     "numeral": "^2.0.6",
     "object-hash": "^2.1.1",
@@ -44,9 +44,9 @@
     "@gittrends/env-config": "file:../env-config",
     "@hsborges/github-proxy-server": "^3.2.3",
     "@types/bluebird": "^3.5.33",
+    "@types/collections": "^5.1.0",
     "@types/express": "^4.17.11",
     "@types/ioredis": "^4.19.3",
-    "@types/lru-cache": "^5.1.0",
     "@types/mongodb": "^3.6.7",
     "@types/numeral": "^2.0.0",
     "@types/object-hash": "^1.3.4",
